--- a/assets/frontend/css/style.css
+++ b/assets/frontend/css/style.css
@@ -241,7 +241,7 @@ section {
 }
 
 .navbar .getstarted {
-  background: #4154f1;
+  background: #d18815;
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 4px;
@@ -448,7 +448,7 @@ section {
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
-  background: #4154f1;
+  background: #d18815;
   box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
 }
 
